Add test for PdalGetDimTypeInterpretationName

--- a/tests/pdal/test_pdalc_pointlayout.c.in
+++ b/tests/pdal/test_pdalc_pointlayout.c.in
@@ -108,6 +108,7 @@ TEST testPDALFindDimType(void)
 		ASSERT(typeNone != expected.type);
 
 		char name[64];
+		ASSERT(PDALGetDimTypeInterpretationName(expected, name, 64) > 0);
 		ASSERT(PDALGetDimTypeIdName(expected, name, 64) > 0);
 
 		actual = PDALFindDimType(NULL, name);
