Remove auto-generated test files and update .gitignore to ignore them

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ if(CMAKE_COMPILER_IS_GNUCXX)
 		set(COVERAGE_EXCLUDES
 			'build/*'
 			'cmake/*'
-			'tests/*'
+			'tests/pdal/*'
 			'/usr/include/*'
 		)
 	endif()
