--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ env:
   - BUILD_TYPE=Debug
 
 script:
-  - docker run -v $TRAVIS_BUILD_DIR:/pdalc -t simverge/pdalc-build-deps:alpine -e "BRANCH=$TRAVIS_BRANCH" -e "BUILD_TYPE=$BUILD_TYPE" /pdalc/tests/travis/script.sh
+  - docker run -v $TRAVIS_BUILD_DIR:/pdalc -t simverge/pdalc-build-deps:alpine -e TRAVIS_BRANCH -e BUILD_TYPE /pdalc/tests/travis/script.sh
