--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_install:
 #  - BUILD_TYPE=Debug
 
 script:
-  - dir $TRAVIS_BUILD_DIR
+  - dir -l $TRAVIS_BUILD_DIR/tests/travis
   - docker run -v $TRAVIS_BUILD_DIR:/pdalc -t simverge/pdalc-build-deps:alpine /pdalc/tests/travis/script.sh
