--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ services: docker
 before_install:
   - docker pull simverge/pdalc-build-deps:alpine
 
-#env:
-#  - BUILD_TYPE=Release
-#  - BUILD_TYPE=Debug
+env:
+  - BUILD_TYPE=Release
+  - BUILD_TYPE=Debug
 
 script:
   - chmod u+x $TRAVIS_BUILD_DIR/tests/travis/script.sh
-  - docker run -e TRAVIS_BRANCH -v $TRAVIS_BUILD_DIR:/pdalc -t simverge/pdalc-build-deps:alpine /pdalc/tests/travis/script.sh
+  - docker run -e TRAVIS_BRANCH -e BUILD_TYPE -v $TRAVIS_BUILD_DIR:/pdalc -t simverge/pdalc-build-deps:alpine /pdalc/tests/travis/script.sh
