--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,15 @@ sudo: required
 language: minimal
 services: docker
 
-before_install:
-  - docker pull simverge/pdalc-build-deps:alpine
-
 env:
-  - BUILD_TYPE=Release
-  - BUILD_TYPE=Debug
+  - DISTRO=alpine BUILD_TYPE=Release
+  - DISTRO=alpine BUILD_TYPE=Debug
+  - DISTRO=ubuntu BUILD_TYPE=Release
+  - DISTRO=ubuntu BUILD_TYPE=Debug
+
+before_install:
+  - docker pull simverge/pdalc-build-deps:$DISTRO
 
 script:
   - chmod u+x $TRAVIS_BUILD_DIR/tests/travis/script.sh
-  - docker run -e TRAVIS_BRANCH -e BUILD_TYPE -v $TRAVIS_BUILD_DIR:/pdalc -t simverge/pdalc-build-deps:alpine /pdalc/tests/travis/script.sh
+  - docker run -e TRAVIS_BRANCH -e BUILD_TYPE -e DISTRO -v $TRAVIS_BUILD_DIR:/pdalc -t simverge/pdalc-build-deps:$DISTRO /pdalc/tests/travis/script.sh
