Add build wrapper and branch variables to sonarcloud config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,9 @@ sonar.sources=source
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.branch.name=sonarcloud
+
+# Properties specific to the C/C++ analyzer:
+sonar.cfamily.build-wrapper-output=bw-output
+#sonar.cfamily.gcov.reportsPath=build/${env.DISTRO}-x86_64-${env.BUILD_TYPE}/coverage_pdalc
