--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,8 @@ sonar.projectVersion=1.8
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
-sonar.sources=source
+sonar.sources=source,tests/pdal
+sonar.exclusions=tests/pdal/greatest.h
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
