--- a/tests/docker/pdalc-build-deps_ubuntu/Dockerfile
+++ b/tests/docker/pdalc-build-deps_ubuntu/Dockerfile
@@ -6,5 +6,6 @@ apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     cmake \
     lcov \
+    wget \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
