--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ before_install:
 script:
   - chmod u+x $TRAVIS_BUILD_DIR/tests/travis/script.sh
   - docker run -e COVERITY_TOKEN -e TRAVIS_COMMIT -e TRAVIS_BRANCH -e BUILD_TYPE -e DISTRO -v $TRAVIS_BUILD_DIR:/pdalc -t simverge/pdalc-build-deps:$DISTRO /pdalc/tests/travis/script.sh
-  - if [ "$DISTRO" = "ubuntu" ] && [ "$BUILD_TYPE" = "Release" ]; then sonar-scanner; fi
+  - if [ "$DISTRO" = "alpine" ] && [ "$BUILD_TYPE" = "Release" ]; then sonar-scanner; fi
