Move sonarcloud build to ubuntu debug

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ addons:
 env:
   - DISTRO=alpine BUILD_TYPE=Release
   - DISTRO=alpine BUILD_TYPE=Debug
-  - DISTRO=ubuntu BUILD_TYPE=Release
-  - DISTRO=ubuntu BUILD_TYPE=Debug
+  - DISTRO=ubuntu BUILD_TYPE=Release SCAN=coverity
+  - DISTRO=ubuntu BUILD_TYPE=Debug SCAN=sonarcloud
 
 before_install:
   - docker pull simverge/pdalc-build-deps:$DISTRO
@@ -24,4 +24,4 @@ before_install:
 script:
   - chmod u+x $TRAVIS_BUILD_DIR/tests/travis/script.sh
   - docker run -e COVERITY_TOKEN -e TRAVIS_COMMIT -e TRAVIS_BRANCH -e BUILD_TYPE -e DISTRO -v $TRAVIS_BUILD_DIR:/pdalc -t simverge/pdalc-build-deps:$DISTRO /pdalc/tests/travis/script.sh
-  - if [ "$DISTRO" = "alpine" ] && [ "$BUILD_TYPE" = "Release" ]; then sonar-scanner; fi
+  - if [ "$SCAN" = "sonarcloud" ]; then sonar-scanner; fi
