Disable tests and docs in Travis CI build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}" CACHE STRING "CMake install prefi
 set(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "CMake debug suffix")
 set(CMAKE_RELWITHDEBINFO_POSTFIX "" CACHE STRING "CMake RelWithDebInfo suffix")
 set(PDALC_ENABLE_CODE_COVERAGE ON CACHE BOOL "Enable code coverage calculation")
+set(PDALC_ENABLE_DOCS ON CACHE BOOL "Enable documentation generation")
+set(PDALC_ENABLE_TESTS ON CACHE BOOL "Enable pdal-c tests")
 set(PDALC_GCC_PARAM_GGC_MIN_HEAPSIZE "131072" CACHE STRING "GCC garbage collection minimum heap size")
 
 include(ObtainProjectVersion)
@@ -29,7 +31,7 @@ include_directories("${CMAKE_SOURCE_DIR}/source")
 if(CMAKE_COMPILER_IS_GNUCXX)
 	add_compile_options(--param ggc-min-heapsize=${PDALC_GCC_PARAM_GGC_MIN_HEAPSIZE})
 
-	if(PDALC_ENABLE_CODE_COVERAGE)
+	if(PDALC_ENABLE_CODE_COVERAGE AND PDALC_ENABLE_TESTS)
 		message(STATUS "Enabled code coverage analysis")
 		include(CodeCoverage)
 		APPEND_COVERAGE_COMPILER_FLAGS()
@@ -43,8 +45,13 @@ if(CMAKE_COMPILER_IS_GNUCXX)
 endif()
 
 add_subdirectory("source/pdal")
-add_subdirectory("doc")
 
-include(CTest)
-add_subdirectory("tests/data")
-add_subdirectory("tests/pdal")
+if(PDALC_ENABLE_DOCS)
+	add_subdirectory("doc")
+endif()
+
+if(PDALC_ENABLE_TESTS)
+	include(CTest)
+	add_subdirectory("tests/data")
+	add_subdirectory("tests/pdal")
+endif()
