--- a/source/pdal/CMakeLists.txt
+++ b/source/pdal/CMakeLists.txt
@@ -49,7 +49,7 @@ set_target_properties(${TARGET} PROPERTIES
 )
 
 # Measure code coverage on gcc
-if(CMAKE_COMPILER_IS_GNUCXX AND PDALC_ENABLE_CODE_COVERAGE)
+if(CMAKE_COMPILER_IS_GNUCXX AND PDALC_ENABLE_CODE_COVERAGE AND PDALC_ENABLE_TESTS)
 	SETUP_TARGET_FOR_COVERAGE(
 		NAME coverage_${TARGET}
 		EXECUTABLE test_${TARGET}
