Add utility functions to read and load a PDAL pipeline
Addresses the following Coverity Scan faults:

**Argument cannot be negative  (CWE-687)**
* [338166](https://scan4.coverity.com/reports.htm#v44582/p16422/fileInstanceId=60498516&defectInstanceId=10894463&mergedDefectId=338166)
* [338167](https://scan4.coverity.com/reports.htm#v44582/p16422/fileInstanceId=60498519&defectInstanceId=10894464&mergedDefectId=338167)
* [338168](https://scan4.coverity.com/reports.htm#v44582/p16422/fileInstanceId=60498520&defectInstanceId=10894466&mergedDefectId=338168)
* [338169](https://scan4.coverity.com/reports.htm#v44582/p16422/fileInstanceId=60498517&defectInstanceId=10894465&mergedDefectId=338169)

**Ignoring number of bytes read (CWE-252)**
* [338170](https://scan4.coverity.com/reports.htm#v44582/p16422/fileInstanceId=60498520&defectInstanceId=10894460&mergedDefectId=338170)
* [338171](https://scan4.coverity.com/reports.htm#v44582/p16422/fileInstanceId=60498517&defectInstanceId=10894462&mergedDefectId=338171)
* [338172](https://scan4.coverity.com/reports.htm#v44582/p16422/fileInstanceId=60498516&defectInstanceId=10894459&mergedDefectId=338172)
* [338173](https://scan4.coverity.com/reports.htm#v44582/p16422/fileInstanceId=60498519&defectInstanceId=10894461&mergedDefectId=338173)

Also addresses previous SonarCloud code smell faults caused by duplicate code blocks.

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,14 @@
 tests/pdal-stats.las
 tests/data/*.json
 tests/pdal/test_pdalc_*.c
+!tests/pdal/test_pdalc_utils.c
 
 # Ignore doxygen docs
 /doc/doxygen
 /doc/Doxyfile
 
 # Select VS Code configurations
+.vscode/ipch/**
 .vscode/settings.json
 .vscode/c_cpp_properties.json
 
