--- a/tests/pdal/test_pdalc_pointviewiterator.c.in
+++ b/tests/pdal/test_pdalc_pointviewiterator.c.in
@@ -44,32 +44,11 @@ static PDALPointViewIteratorPtr gPointViewIterator = NULL;
 
 static void setup_test_pdalc_pointviewiterator(void *arg)
 {
-    FILE *file = fopen("@CMAKE_BINARY_DIR@/data/stats.json", "rb");
-    char *json = NULL;
+    gPipeline = PDALLoadPipeline("@CMAKE_BINARY_DIR@/data/simple-reproject.json");
 
-    if (file)
+    if (gPipeline)
     {
-        fseek(file, 0, SEEK_END);
-        long length = ftell(file);
-        fseek(file, 0, SEEK_SET);
-        char *json = malloc(length + 1);
-
-        if (json)
-        {
-            fread(json, 1, length, file);
-            json[length] = '\0';
-
-            gPipeline = PDALCreatePipeline(json);
-
-            if (gPipeline && PDALExecutePipeline(gPipeline))
-            {
-                gPointViewIterator = PDALGetPointViews(gPipeline);
-            }
-
-            free(json);
-        }
-
-        fclose(file);
+        gPointViewIterator = PDALGetPointViews(gPipeline);
     }
 }
 
