Address left over CWE-687 fault and missing include
Check that ftell returns a positive number before reading JSON text in PDALReadPipelineJson.

Add missing test_pdalc_utils.h include in test_pdalc_pointviewiterator.c.in.

--- a/tests/pdal/test_pdalc_pointviewiterator.c.in
+++ b/tests/pdal/test_pdalc_pointviewiterator.c.in
@@ -36,6 +36,7 @@
 #include <pdal/pdalc_pointviewiterator.h>
 
 #include "greatest.h"
+#include "test_pdalc_utils.h"
 
 SUITE(test_pdalc_pointviewiterator);
 
