Add __STDC_WANT_LIB_EXT1__ macro define for safe sscanf support

--- a/tests/pdal/test_pdalc_pipeline.c.in
+++ b/tests/pdal/test_pdalc_pipeline.c.in
@@ -28,6 +28,9 @@
  * POSSIBILITY OF SUCH DAMAGE.
  *****************************************************************************/
 
+// Required before including stdio.h to support secure scanf C functions
+#define __STDC_WANT_LIB_EXT1__ 1
+
 #include <stdio.h>
 #include <assert.h>
 
