Add git fetch --unshallow step in Travis CI before SonarCloud builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_install:
   - docker pull simverge/pdalc-build-deps:$DISTRO
 
 script:
+  - if [ "$SCAN" = "sonarcloud" ]; then git fetch --unshallow --tags --quiet; fi
   - chmod u+x $TRAVIS_BUILD_DIR/tests/travis/script.sh
   - docker run -e SCAN -e COVERITY_EMAIL -e COVERITY_TOKEN -e TRAVIS_COMMIT -e TRAVIS_BRANCH -e BUILD_TYPE -e DISTRO -v $TRAVIS_BUILD_DIR:/pdalc -t simverge/pdalc-build-deps:$DISTRO /pdalc/tests/travis/script.sh
   - if [ "$SCAN" = "sonarcloud" ]; then sonar-scanner; fi
