--- a/tests/pdal/test_pdalc_pointlayout.c.in
+++ b/tests/pdal/test_pdalc_pointlayout.c.in
@@ -28,6 +28,7 @@
  *****************************************************************************/
 
 #include <assert.h>
+#include <math.h> // for fabs
 
 #include <pdal/pdalc.h>
 
@@ -57,6 +58,8 @@ static void setup_test_pdalc_pointlayout(void *arg)
                 gLayout = PDALGetPointViewLayout(gPointView);
             }
         }
+
+        PDALDisposePointViewIterator(views);
     }
 }
 
@@ -76,9 +79,14 @@ TEST testPDALGetPointLayoutDimTypes(void)
     ASSERTm("PDALGetPointLayoutDimTypes should return non-NULL for a valid layout", types);
 
     size_t size = PDALGetDimTypeListSize(types);
+
+    // Dispose types list before assertion to avoid CWE-404
+    // See http://cwe.mitre.org/data/definitions/404.html
+    // See https://scan4.coverity.com/doc/en/cov_checker_ref.html#static_checker_RESOURCE_LEAK
+    PDALDisposeDimTypeList(types);
+
     ASSERTm("PDALGetDimTypeListSize should return more than zero for a valid list", size > 0);
 
-    PDALDisposeDimTypeList(types);
     PASS();
 }
 
@@ -108,24 +116,38 @@ TEST testPDALFindDimType(void)
     for (size_t i = 0; i < size; ++i)
     {
         PDALDimType expected = PDALGetDimType(types, i);
-        ASSERT(idUnknown != expected.id);
-        ASSERT(typeNone != expected.type);
+
+        // Use check with FAIL instead of assertions to avoid CWE-404
+        // See http://cwe.mitre.org/data/definitions/404.html
+        // See https://scan4.coverity.com/doc/en/cov_checker_ref.html#static_checker_RESOURCE_LEAK
+
+        bool success = (idUnknown != expected.id);
+        success &= (typeNone != expected.type);
 
         char name[64];
-        ASSERT(PDALGetDimTypeInterpretationName(expected, name, 64) > 0);
-        ASSERT(PDALGetDimTypeIdName(expected, name, 64) > 0);
+        success &= (PDALGetDimTypeInterpretationName(expected, name, 64) > 0);
+        success &= (PDALGetDimTypeIdName(expected, name, 64) > 0);
 
         actual = PDALFindDimType(NULL, name);
-        ASSERT_EQ(idUnknown, actual.id);
-        ASSERT_EQ(typeNone, actual.type);
-        ASSERT_IN_RANGE(1.0, actual.scale, tolerance);
-        ASSERT_IN_RANGE(0.0, actual.offset, tolerance);
+        success &= (idUnknown == actual.id); 
+        success &= (typeNone == actual.type);
+
+        success &= (fabs(1.0 - actual.scale) < tolerance);
+        success &= (fabs(actual.offset) < tolerance);
 
         actual = PDALFindDimType(gLayout, name);
-        ASSERT_EQ(expected.id, actual.id);
-        ASSERT_EQ(expected.type, actual.type);
-        ASSERT_IN_RANGE(expected.scale, actual.scale, tolerance);
-        ASSERT_IN_RANGE(expected.offset, actual.offset, tolerance);
+        success &= (expected.id == actual.id); 
+        success &= (expected.type == actual.type);
+
+        success &= (fabs(expected.scale - actual.scale) < tolerance);
+        success &= (fabs(expected.offset - actual.offset) < tolerance);
+
+        if (!success)
+        {
+            PDALDisposeDimTypeList(types);
+            types = NULL;
+            FAILm("PDALGetPointLayoutDimTypes returned a list with an invalid element");
+        }
     }
 
     PDALDisposeDimTypeList(types);
