--- a/tests/pdal/test_pdalc_pointview.c.in
+++ b/tests/pdal/test_pdalc_pointview.c.in
@@ -33,6 +33,7 @@
 #include <string.h>
 #include <assert.h>
 
+
 #include <pdal/pdalc.h>
 
 #include "greatest.h"
@@ -403,6 +404,7 @@ TEST testPDALGetPointViewWkt(void)
         "],"
         "PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],"
         "UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],"
+        "AXIS[\"Latitude\",NORTH],AXIS[\"Longitude\",EAST],"
         "AUTHORITY[\"EPSG\",\"4326\"]"
         "]";
 
