--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -1,10 +1,10 @@
-name: Windows Build Test
+name: Linux Build Test
 on:
-  workflow_dispatch
+  pull_request
   
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout The PR
@@ -14,19 +14,18 @@ jobs:
         uses: conda-incubator/setup-miniconda@v1.7.0
         
       - name: Install PDAL
-        shell: pwsh
+        shell: bash -l {0}
         run: conda install -c conda-forge pdal
         
       - name: Build
-        shell: pwsh
+        shell: bash -l {0}
         run: |
-          set TOOLCHAIN=""
-          cd $env:GITHUB_WORKSPACE
-          Start-Process make.bat
+          cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DCONDA_BUILD=OFF .
+          make
+          make install
           
       - name: Test
-        shell: pwsh
+        shell: bash -l {0}
         run: |
-           $env:PATH="$env:GITHUB_WORKSPACE\build\x64-windows\source\pdal\release\;$env:GITHUB_WORKSPACE\build\x64-windows\tests\pdal\release;$env:PATH"
-           Start-Process test_pdalc.exe
+           ctest -VV
 
