--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,13 @@ tests/pdal/test_pdalc_*.c
 *.su
 *.idb
 *.pdb
+
+CMakeFiles/
+*.cmake
+CMakeCache.txt
+Makefile
+Data/
+Doxyfile
+*.tcl
+
+Testing/
