--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,10 @@ jobs:
         run: conda install -c conda-forge pdal
         
       - name: Build
-        shell: pwsh
+        shell: cmd /C call {0}
         run: |
           set TOOLCHAIN=""
-          cd $env:GITHUB_WORKSPACE
-          $env:GITHUB_WORKSPACE\make.bat
+          make.bat
           
       - name: Test
         shell: pwsh
