--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build
         shell: bash -l {0}
         run: |
-          cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DCONDA_BUILD=OFF \ .
+          cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DCONDA_BUILD=OFF .
           make
           make install
           
