--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Test
         shell: bash -l {0}
         run: |
-           test_pdalc.exe
            ctest -VV
+           test_pdalc
 
