--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -28,5 +28,6 @@ jobs:
         run: |
            $env:PATH="$env:GITHUB_WORKSPACE\build\x64-windows\source\pdal\release\;$env:PATH"
            cd $env:GITHUB_WORKSPACE\build\x64-windows\tests\pdal\release
+           dir
            test_pdalc
 
