--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -9,13 +9,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout The PR
         uses: actions/checkout@v2
-        
-      - name: Install Conda
-        uses: conda-incubator/setup-miniconda@v1.7.0
-        
-      - name: Install PDAL
-        shell: bash -l {0}
-        run: conda install -c conda-forge pdal
+      
+      - name: Run Doxygen
+        uses: mattnotmitt/doxygen-action@v1.2.0
+      
         
       - name: Build
         shell: bash -l {0}
